--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path=""/>
+	<classpathentry kind="lib" path="C:/Users/zacwi/Downloads/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/zacwi/Downloads/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
